fixed alignment of hangman image

--- a/js/day12/project1/main.css
+++ b/js/day12/project1/main.css
@@ -64,6 +64,12 @@ input:focus {
     border: 3px solid rgba(124, 252, 0, .9);
 }
 
+#hangman-graphic {
+    margin-top: 50px;
+    text-align: center;
+    /* margin: 0 auto; */
+}
+
 #hangman-image img {
     width: 300px;
     height: 200px;
